cambio de color de barra lateral

--- a/src/assets/sass/light-bootstrap-dashboard.css
+++ b/src/assets/sass/light-bootstrap-dashboard.css
@@ -358,7 +358,8 @@ body > .navbar-collapse:after {
   background: -webkit-linear-gradient(top, #282828 0%, #111 100%);
   background: -o-linear-gradient(top, #282828 0%, #111 100%);
   background: -ms-linear-gradient(top, #282828 0%, #111 100%);
-  background: linear-gradient(to bottom, #282828 0%, #111 100%);
+  background: linear-gradient(to bottom, #ffa534c7 0%, #ffa534 100%);
+ 
   background-size: 150% 150%;
   z-index: 3;
   opacity: 1; }
